data/derived/sp14/progs/unify/prog1605.ml.out
Characters 96-98:
  | hd :: tl ->  tl  (hd :: result)
                 ^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
